# DSAN-5400-Final-Project

./: .gitignore  README.md  check_emotion_scores.py  environment.yml  parent_child_pairs.parquet  pyproject.toml  run_aggregator_test.py  run_emotion_aggregation.py  threads_with_replies.parquet
data/: contagion_ready.parquet  download_data.py  emotion_scores_child.parquet  emotion_scores_parent.parquet  loader.py  logging_config.py  parent_child_pairs.parquet  run_full_pipeline.py  text_cleaner.py  thread_builder.py  threads_clean.parquet  threads_with_replies.parquet
emocon/contagion/: analysis.py  decay_model.py  emotion_transitions.py  model.py  outlier_analysis.py  propogation_strength.py  significance_tests.py
emocon/models/: emotion_model.py
emocon/results/: contagion_stats.json  decay_stats.json  emotion_propagation.csv  emotion_transition_counts.csv  emotion_transition_probs.csv  outlier_analysis.json  significance_stats.json
examples/: README.md  run_aggregator_test.py  run_emotion_aggregation.py
logs/: .gitkeep
results/: contagion_stats.json  decay_stats.json  emotion_propagation.csv  emotion_propagation.json  emotion_transition_counts.csv  emotion_transition_counts.json  emotion_transition_probs.csv  emotion_transition_probs.json  outlier_analysis.json  significance_stats.json
scripts/: README.md  verify_package.py
src/emocon/: __init__.py  __main__.py  cli.py  utils.py
src/emocon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/emocon/contagion/: __init__.py  analysis.py  decay_model.py  emotion_transitions.py  model.py  outlier_analysis.py  propogation_strength.py  significance_tests.py
src/emocon/data/: __init__.py  loader.py  pipeline.py
src/emocon/models/: __init__.py  emotion_model.py
src/emocon/visualization/: __init__.py  plotter.py
tests/: test_pipeline.py
