[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emocon"
version = "0.1.0"
description = "Emotional Contagion Analysis for Reddit Comment Threads"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ke Tian"},
    {name = "Kaylee Cameron"},
    {name = "Matthew Hakim"},
    {name = "Yanmin Gui"},
    {name = "Jiaheng Cao"},
]
keywords = ["nlp", "emotion", "contagion", "reddit", "sentiment-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "pyarrow>=10.0.0",
    "networkx>=2.8.0",
    "scipy>=1.9.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "statsmodels>=0.13.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.urls]
"Homepage" = "https://github.com/your-team/DSAN-5400-Final-Project"
"Bug Reports" = "https://github.com/your-team/DSAN-5400-Final-Project/issues"
"Source" = "https://github.com/your-team/DSAN-5400-Final-Project"

[project.scripts]
emocon = "emocon.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["emocon*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
